--- a/deepdive/static/deepdive/style.css
+++ b/deepdive/static/deepdive/style.css
@@ -1,9 +1,11 @@
+/* color changed by Sadhana */
+/* by anil */
 * {
     padding: 0px;
     margin: 0px;
   }
   body {
-    background-color: lightpink;
+    background-color: #91D8E4;
   }
 
   .box{
@@ -12,11 +14,12 @@
   
   .nav {
     display: flex;
+    flex-wrap: nowrap;
     width: 100%;
     align-items: center;
     justify-items: center;
     margin-right: 0px;
-    background-color: rgb(45, 79, 45);
+    background-color: rgb(168, 13, 13);
   }
   #navlink {
     padding-right: 300px;
@@ -35,6 +38,7 @@
     position: absolute;
     right: 30px;
     top: 30px;
+    transition: all .3s linear;
   }
   .photo:hover {
     transform: scale(1.5);
@@ -59,7 +63,7 @@
     border-radius: 2px;
   }
   .nav ul li:hover {
-    border-bottom: solid 3px rgb(52, 99, 52);
+    border-bottom: solid 3px #1a0000;
   }
   .nav ul a {
     text-decoration: none;
@@ -73,14 +77,19 @@
   }
   .textBox {
     color: white;
-    background-color: rgb(133, 188, 133);
+    height: 100%;
+    background-color: #82AAE3;
     display: flex;
     margin: 30px 0px;
-    padding: 30px 0px;
+    padding-left: 30px;
+    padding-right: 30px;
     flex-direction: column;
     text-decoration: none;
-    justify-content: center;
-    align-items: center;
+    transition: all .3s linear;
+    border-radius: 10px;
+    max-height: 20rem ;
+    margin: 3px;
+    overflow: hidden;
   }
   .textBox:hover {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
@@ -88,6 +97,7 @@
   
   .box2 {
     margin-top: 30px;
+    padding: 30px;
   }
   form div {
     display: flex;
@@ -112,7 +122,7 @@
   }
   .button:hover {
     color: white;
-    background-color: green;
+    background-color: rgb(15, 247, 181);
   }
   footer {
     display: flex;
@@ -120,7 +130,7 @@
     justify-content: center;
     flex-direction: column;
     height: 200px;
-    background-color: rgb(162, 209, 162);
+    background-color:#bfeaf5;
   }
   footer div {
     margin-top: 30px;
@@ -183,4 +193,22 @@
       display: block;
     }
   }
-  
+
+
+/* anything below this is added by ashok */
+
+h1{
+  color: #eafdec;
+}
+
+textarea{
+  border-radius: 10px;
+}
+
+.postForm{
+  margin-top: 10px;margin-left: 100px;margin-right: 100px;
+}
+
+.posts{
+  display: flex;flex-wrap: wrap;
+}
