--- a/deepdive/templates/deepdive/analyzingPeople.html
+++ b/deepdive/templates/deepdive/analyzingPeople.html
@@ -7,6 +7,32 @@ AnalyzingPeople
     
 {% block body %} 
 
+<div id="info_about_traits">
+This Big Five assessment measures your scores on five major dimensions of personality: Openness, Conscientiousness, Extraversion, Agreeableness, and Neuroticism (sometimes abbreviated OCEAN). In this free report, you'll see a description of each of these five factors of personality, as well as a graph of your score on that measure.
+
+<h4>Openness</h4>
+Openness describes a person’s tendency to think in abstract, complex ways. High scorers tend to be creative, adventurous, and intellectual. They enjoy playing with ideas and discovering novel experiences. Low scorers tend to be practical, conventional, and focused on the concrete. They tend to avoid the unknown and follow traditional ways.
+
+<h4>Conscientiousness</h4>
+
+Conscientiousness describes a person’s ability to exercise self-discipline and control in order to pursue their goals. High scorers are organized and determined, and are able to forego immediate gratification for the sake of long-term achievement. Low scorers are impulsive and easily sidetracked.
+
+
+<h4>Extraversion</h4>
+
+Extraversion describes a person’s inclination to seek stimulation from the outside world, especially in the form of attention from other people. Extraverts engage actively with others to earn friendship, admiration, power, status, excitement, and romance. Introverts, on the other hand, conserve their energy, and do not work as hard to earn these social rewards.
+
+
+<h4>Agreeableness</h4>
+
+Agreeableness describes a person’s tendency to put others’ needs ahead of their own, and to cooperate rather than compete with others. People who are high in Agreeableness experience a great deal of empathy and tend to get pleasure out of serving and taking care of others. They are usually trusting and forgiving. People who are low in Agreeableness tend to experience less empathy and put their own concerns ahead of others.
+
+<h4>Neuroticism</h4>
+
+Neuroticism describes a person’s tendency to experience negative emotions, including fear, sadness, anxiety, guilt, and shame. While everyone experiences these emotions from time to time, some people are more prone to them than others. High Neuroticism scorers are more likely to react to a situation with fear, anger, sadness, and the like. Low Neuroticism scorers are more likely to brush off their misfortune and move on.
+
+<h3><a href="https://www.truity.com/test/big-five-personality-test" target="_blank">Find your personality traits here.</a></h3>
+</div>
 
 <div class="box">
     <div class="textBox postForm">
