--- a/deepdive/templates/deepdive/journal.html
+++ b/deepdive/templates/deepdive/journal.html
@@ -9,7 +9,7 @@ Journal
 
 
 <div class="box">
-    <div class="textBox postForm">
+    <div class="postForm journal">
         <h1>Add a journal.</h1>
 
         <form action="{% url 'add_journal' %}" method="post">
@@ -26,7 +26,7 @@ Journal
 
     <div class="posts">
         {% for journal in journals %}
-        <div class="textBox">
+        <div class="journal">
             <h1>{{journal.date}}</h1>
             <div class="box2">
                 <p>highlights: {{journal.highlights}}</p>
